fixed vertical spacing

--- a/client/homebrew/editor/metadataEditor/metadataEditor.less
+++ b/client/homebrew/editor/metadataEditor/metadataEditor.less
@@ -9,19 +9,28 @@
 	background-color : #999;
 	height           : calc(100vh - 54px); // 54px is the height of the navbar + snippet bar.  probably a better way to dynamic get this.
 
-	display: flex;
-	flex-wrap: wrap;
-	gap: 10px;
+	& > div {
+		margin-bottom: 10px;
+	}
 
 	.field-group {
 		display: flex;
-		flex-direction: column;
-		flex: 5;
+		width: 100%;
+		flex-wrap: wrap;
 		gap: 10px;
+	}
+
+	.field-column {
+		display: flex;
+		flex-direction: column;
+		flex: 5 0 200px;
+		gap: 10px;
+		
 	}
 	.field{
 		display       : flex;
 		width         : 100%;
+		min-width     : 200px;
 		&>label{
 			display        : inline-block;
 			vertical-align : top;
